Fix width of titles
Currently the title of a page or article is wider than the content, so
an horizontal scroll bar is formed. I had to adjust the margin to
'0 auto' to fix this

--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -21,7 +21,7 @@ article {
 			font-size: 35px;
 		}
 		h1, h2 {
-			margin: 0 10px;
+			margin: 0 auto;
 		}
 		p {
 			margin: 0 10px;
